# AI-x-Finance-hackathon

./: .gitignore  README.md  data_presentation_agent.py  pyproject.toml  sectors.py  stock_analyst.py  stock_analyst.yaml  utils.py
data/: AIFDataLoader.py  extract.py  load.py  transform.py
gpt_research/: README.md  __init__.py  example.py  researcher.py
research_reports/: Analyze_the_performance_of_all_stocks_in_the_XLK_sector_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fANSYS_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAccenture_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAdobe_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAdvanced_Micro_Devices_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAkamai_Technologies_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAmphenol_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAnalog_Devices_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fApple_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fApplied_Materials_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fArista_Networks_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fAutodesk_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fBroadcom_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fCDW_Corporation_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fCadence_Design_Systems_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fCisco_Systems_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fCognizant_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fCorning_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fCrowdStrike_over_the_past_year._custom_report.md  Analyze_the_performance_of_the_stock_in_the_fDell_Technologies_over_the_past_year._custom_report.md  (+51 more)
(+10 files in other folders)
