[project]
name = "20250125-ai-x-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "arxiv>=2.1.3",
    "duckduckgo-search>=7.2.1",
    "lxml-html-clean>=0.4.1",
    "newspaper4k>=0.9.3.1",
    "openai>=1.60.1",
    "phidata>=2.7.9",
    "polygon-api-client>=1.14.3",
    "praw>=7.8.1",
    "sqlalchemy>=2.0.37",
    "yfinance>=0.2.52",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
]
