[project]
name = "20250125-ai-x-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckduckgo-search>=7.2.1",
    "gpt-researcher>=0.10.11",
    "langchain>=0.3.15",
    "langchain-openai>=0.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "lxml-html-clean>=0.4.1",
    "mplfinance>=0.12.10b0",
    "newspaper4k>=0.9.3.1",
    "openai>=1.60.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "phidata>=2.7.9",
    "praw>=7.8.1",
    "pypst>=0.6.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.1",
    "yfinance>=0.2.52",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "mypy>=1.14.1",
    "notebook>=7.3.2",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.9.3",
]
